# short-url

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.local  README.md  compose.yaml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs  prettier.config.mjs
.github/workflows/: ci.yaml  docker-backend.yaml  docker-frontend.yaml  docker.yaml
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/_actions/: shorten.ts
app/components/: copy-button.tsx  shorten-form.tsx  shorten-history-section.tsx  shorten-history-store.ts
app/i18n/: client.ts  resources.ts  server.ts  settings.ts
app/i18n/locales/ja/: translation.json
app/pages/admin/: admin-dashboard.tsx  page.tsx
app/pages/admin/[id]/: page.tsx
app/pages/admin/_actions/: admin.ts
app/pages/admin/_components/: client-datetime.tsx
app/pages/privacy/: page.tsx
app/pages/terms/: page.tsx
components/ui/: alert.tsx  dialog.tsx
psql/: init.sql
scylla/: initdb.sh
src/: config.rs  db.rs  domain.rs  errors.rs  handler.rs  lib.rs  main.rs
src/config/: logger.rs
src/domain/: error.rs  id.rs  models.rs  repository.rs
src/handler/: config.rs  handlers.rs
src/infra/postgres/: db.rs
src/postgres/: config.rs  db.rs
src/scylla/: config.rs  db.rs
src/usecase/: usecase.rs
