[package]
name = "short-url"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.100"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"
envconfig = "0.11.0"
envy = "0.4.2"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = "0.8.5"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-subscriber = { version = "0.3.19", features = [
    "json",
    "chrono",
    "valuable",
] }
trait-variant = "0.1.2"
valuable = { version = "0.1.1", features = ["derive"] }
