[package]
name = "walnuk"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.100"
backon = "1.6.0"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"
const_format = "0.2.35"
envconfig = "0.11.0"
envy = "0.4.2"
phf = { version = "0.13.1", features = ["macros"] }
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
scylla = { version = "1.4.1", features = ["chrono-04", "rustls-023"] }
serde = "1.0.219"
serde_json = "1.0.140"
sqids = "0.4.2"
sqlx = { version = "0.8.5", features = ["postgres"] }
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-subscriber = { version = "0.3.19", features = [
    "json",
    "chrono",
    "valuable",
] }
trait-variant = "0.1.2"
valuable = { version = "0.1.1", features = ["derive"] }
